# centcom

./: .gitignore  Cargo.toml  LICENSE  README.md  backspace.txt  logs.txt  move_right.txt  notes.md  themes.txt
scripts/: themes.ts
src/: app.aml  app.rs  app_themes.rs  code_gen.rs  components.rs  dashboard.rs  fs.rs  main.rs  messages.rs  options.rs  projects.rs  requests.rs  theme.rs  themes.rs  widgets.rs
src/app_themes/: catppuccin.json  default theme.json  gruvbox.json  kanagawa.json  tokyonight.json
src/compatibility/: postman.rs
src/components/: add_header_window.rs  app_layout.rs  app_section.rs  confirm_action_window.rs  dashboard.rs  edit_header_selector.rs  edit_header_window.rs  edit_input.rs  edit_name_textinput.rs  edit_value_textinput.rs  floating_windows.rs  focusable_section.rs  header_name_textinput.rs  header_value_textinput.rs  inputs.rs  menu_item.rs  method_selector.rs  options.rs  project_window.rs  request_body_section.rs  request_headers_editor.rs  response_renderer.rs  row.rs  syntax_highlighter.rs  textarea.rs  textinput.rs
src/components/floating_windows/: app_theme_selector.rs  code_gen.rs  commands.rs  edit_endpoint_name.rs  edit_project_name.rs  endpoints_selector.rs  syntax_theme_selector.rs
src/components/templates/: add_header_window.aml  app_layout.aml  app_section.aml  confirm_action_window.aml  dashboard.aml  dashboard_reference.aml  edit_header_selector.aml  row.aml  (+15 more)
src/messages/: confirm_delete_endpoint.rs  confirm_delete_project.rs
src/widgets/: text2.rs
themes/: catppuccin-mocha.tmTheme  code_sample.rs  themes.txt
(+12 files in other folders)
