[package]
name = "centcom"
version = "0.1.0"
edition = "2021"

[dependencies]
anathema = { git = "https://github.com/s9tpepper/anathema.git", branch = "main" }
arboard = "3.4.1"
clap = { version = "4.5.17", features = ["derive", "env", "cargo"] }
http = "1.1.0"
ureq = { version = "2.10.1", features = ["http-crate", "http-interop", "json"] }
