[package]
name = "centcom"
version = "0.1.0"
edition = "2021"

[dependencies]
anathema = { git = "https://github.com/s9tpepper/anathema.git", branch = "dev" }
anyhow = "1.0.92"
arboard = "3.4.1"
clap = { version = "4.5.17", features = ["derive", "env", "cargo"] }
directories = "5.0.1"
log = "0.4.22"
quit = "2.0.0"
serde = { version = "1.0.210", features = ["alloc", "derive", "serde_derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
syntect = "5.2.0"
ureq = { version = "2.10.1", features = ["json"] }
